# DNK

./: .gitignore  Data Analysis.py  README.md  database_create_delete.py  main.py  pyproject.toml  requirements.txt  test_template.py
app/: database.py  database_maker.py  main.py
app/app_database/: crud.py  database.py  models.py  schemas.py  tests.db
app/database/: constants.py  crud.py  database.py  models.py  schemas.py  tests.db  types.py
db/: tests.db
static/: info.txt  style.css  styles.css
static/js/: questions.js  tests.js
templates/: all_tests.html  errors.html  header.html  index.html  info.txt  list_of_tests.html  login.html  page.html  page_of_test.html  question.html  question_card.html  site_hiding.html  test.html  tests.html
templates/includes/: footer.html  header.html
templates/legacy/: list_of_tests.html  login.html  page_of_test.html  site_hiding.html
test/: main.py
