[tool.poetry]
name = "dnk"
version = "0.1.0"
description = "Глобальный нOur project for Dnk"
authors = ["GreenCoo <nosovivan263@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}
jinja2 = "^3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
